--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 
   <h1>SMART SHANKAR QUIZE TEST</h1>
   <div class="quiz-container" id="quiz">
+    <h2 id="section-title">सेक्शन: HISTORY</h2>
     <div id="question-container"></div>
     <div class="buttons">
       <button class="prev" onclick="prevQuestion()">Previous</button>
@@ -75,27 +76,58 @@
   </div>
 
   <script>
-    // फिलहाल कोई भी question नहीं है
-    let questions = [];
+    // दो sections के सवाल
+    const sections = {
+      "HISTORY": [
+        {
+          question: "ताजमहल किसने बनवाया था?",
+          options: ["अकबर", "शाहजहाँ", "औरंगज़ेब", "बाबर"],
+          answer: "शाहजहाँ"
+        },
+        {
+          question: "1857 की क्रांति का प्रथम स्वतंत्रता संग्राम कहाँ शुरू हुआ?",
+          options: ["मेरठ", "दिल्ली", "लखनऊ", "कानपुर"],
+          answer: "मेरठ"
+        }
+      ],
+      "ECONOMICS": [
+        {
+          question: "भारत में मुद्रा किस संस्था द्वारा जारी की जाती है?",
+          options: ["SBI", "वित्त मंत्रालय", "RBI", "SEBI"],
+          answer: "RBI"
+        },
+        {
+          question: "GDP का पूरा रूप क्या है?",
+          options: ["Gross Domestic Product", "Global Development Plan", "General Domestic Policy", "Gross Development Program"],
+          answer: "Gross Domestic Product"
+        }
+      ]
+    };
 
+    let sectionNames = Object.keys(sections);
+    let currentSectionIndex = 0;
     let currentQuestion = 0;
-    let userAnswers = [];
+    let userAnswers = {};
 
     function loadQuestion() {
+      let section = sectionNames[currentSectionIndex];
+      let questions = sections[section];
+
+      document.getElementById("section-title").innerText = "सेक्शन: " + section;
+
       if (questions.length === 0) {
-        document.getElementById("question-container").innerHTML =
-          "<p>⚠️ अभी कोई प्रश्न उपलब्ध नहीं है।</p>";
+        document.getElementById("question-container").innerHTML = "<p>⚠️ इस सेक्शन में कोई प्रश्न नहीं है।</p>";
         document.querySelector(".buttons").style.display="none";
         return;
       }
-      const container = document.getElementById("question-container");
+
       const q = questions[currentQuestion];
-      container.innerHTML = `
+      document.getElementById("question-container").innerHTML = `
         <div class="question">Q${currentQuestion+1}: ${q.question}</div>
         <div class="options">
           ${q.options.map((opt,i)=>`
             <label>
-              <input type="radio" name="option" value="${opt}" ${userAnswers[currentQuestion]===opt ? "checked":""}>
+              <input type="radio" name="option" value="${opt}" ${(userAnswers[section] && userAnswers[section][currentQuestion]===opt) ? "checked":""}>
               ${String.fromCharCode(65+i)}. ${opt}
             </label>
           `).join('')}
@@ -103,14 +135,85 @@
       `;
     }
 
+    function saveAnswer(){
+      let section = sectionNames[currentSectionIndex];
+      let selected = document.querySelector('input[name="option"]:checked');
+      if(!userAnswers[section]) userAnswers[section] = [];
+      if(selected){
+        userAnswers[section][currentQuestion] = selected.value;
+      }
+    }
+
     function nextQuestion() {
       saveAnswer();
+      let section = sectionNames[currentSectionIndex];
+      let questions = sections[section];
       if(currentQuestion < questions.length-1){
         currentQuestion++;
-        loadQuestion();
+      } else if(currentSectionIndex < sectionNames.length-1){
+        currentSectionIndex++;
+        currentQuestion = 0;
       }
+      loadQuestion();
     }
 
     function prevQuestion() {
       saveAnswer();
-      if(currentQuestio
+      if(currentQuestion > 0){
+        currentQuestion--;
+      } else if(currentSectionIndex > 0){
+        currentSectionIndex--;
+        let prevSection = sectionNames[currentSectionIndex];
+        currentQuestion = sections[prevSection].length-1;
+      }
+      loadQuestion();
+    }
+
+    function showResult(){
+      saveAnswer();
+      let resultHTML = "<h2>परिणाम / Result</h2>";
+      let totalScore = 0, totalQuestions = 0;
+
+      sectionNames.forEach(section=>{
+        let questions = sections[section];
+        resultHTML += `<h3>सेक्शन: ${section}</h3>`;
+        questions.forEach((q,i)=>{
+          let correct = q.answer;
+          let user = (userAnswers[section] && userAnswers[section][i]) || "कोई जवाब नहीं";
+          if(user === correct) totalScore++;
+          resultHTML += `
+            <div>
+              <b>Q${i+1}:</b> ${q.question}<br>
+              आपका जवाब: <span class="${user===correct?'correct':'wrong'}">${user}</span><br>
+              सही जवाब: <span class="correct">${correct}</span><br><br>
+            </div>
+          `;
+        });
+        totalQuestions += questions.length;
+      });
+
+      resultHTML += `<h3>आपका कुल स्कोर: ${totalScore} / ${totalQuestions}</h3>`;
+      resultHTML += `<button class="restart" onclick="restartQuiz()">Restart Test</button>`;
+
+      document.getElementById("question-container").style.display="none";
+      document.querySelector(".buttons").style.display="none";
+      const resultBox = document.getElementById("result-container");
+      resultBox.style.display="block";
+      resultBox.innerHTML = resultHTML;
+    }
+
+    function restartQuiz(){
+      currentSectionIndex = 0;
+      currentQuestion = 0;
+      userAnswers = {};
+      document.getElementById("question-container").style.display="block";
+      document.querySelector(".buttons").style.display="block";
+      document.getElementById("result-container").style.display="none";
+      loadQuestion();
+    }
+
+    loadQuestion();
+  </script>
+
+</body>
+</html>
