--- a/index.html
+++ b/index.html
@@ -2,38 +2,77 @@
 <html lang="hi">
 <head>
   <meta charset="UTF-8">
-  <title>Quiz App</title>
+  <title>Smart Shankar Quiz Test</title>
   <style>
-    body { font-family: Arial, sans-serif; padding: 20px; }
-    #quiz, #topic-menu, #question-container, #result-container { display:none; }
-    button { margin: 5px; padding: 10px 15px; border:none; border-radius:8px; background:#4CAF50; color:white; cursor:pointer; }
-    button:hover { background:#45a049; }
-    .card { margin:10px 0; padding:10px; border:1px solid #ddd; border-radius:8px; }
+    body {
+      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      background: #f4f4f9;
+    }
+    .container {
+      width: 500px;
+      background: white;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      text-align: center;
+    }
+    h1 {
+      margin-bottom: 20px;
+      color: #333;
+    }
+    .card {
+      margin: 15px 0;
+      padding: 10px;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      text-align: left;
+    }
+    button {
+      margin: 8px;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 8px;
+      background: #4CAF50;
+      color: white;
+      font-size: 16px;
+      cursor: pointer;
+    }
+    button:hover { background: #45a049; }
+    #quiz, #result-container { display:none; }
   </style>
 </head>
 <body>
-  <!-- Section Menu -->
-  <div id="section-menu">
-    <h2>Choose Section</h2>
-    <button onclick="openTopics('history')">History</button>
-    <button onclick="openTopics('economics')">Economics</button>
-  </div>
+  <div class="container">
+    <h1>Smart Shankar Quiz Test</h1>
 
-  <!-- Topic Menu -->
-  <div id="topic-menu"></div>
-
-  <!-- Quiz Container -->
-  <div id="quiz">
-    <div id="question-container"></div>
-    <div class="buttons">
-      <button onclick="prevQuestion()">⬅ Prev</button>
-      <button onclick="nextQuestion()">Next ➡</button>
-      <button onclick="showResult()">✅ Finish</button>
+    <!-- Section Menu -->
+    <div id="section-menu">
+      <h2>Choose Section</h2>
+      <button onclick="openTopics('history')">History</button>
+      <button onclick="openTopics('economics')">Economics</button>
     </div>
-  </div>
 
-  <!-- Result -->
-  <div id="result-container"></div>
+    <!-- Topic Menu -->
+    <div id="topic-menu"></div>
+
+    <!-- Quiz -->
+    <div id="quiz">
+      <div id="question-container"></div>
+      <div>
+        <button onclick="prevQuestion()">⬅ Previous</button>
+        <button onclick="nextQuestion()">Next ➡</button>
+        <button onclick="showResult()">✅ Finish</button>
+      </div>
+    </div>
+
+    <!-- Result -->
+    <div id="result-container"></div>
+  </div>
 
   <script>
     // Questions Data
@@ -42,17 +81,11 @@
         harappa: [
           {question:"हड़प्पा सभ्यता कहाँ स्थित थी?", options:["सिंधु घाटी","मेसोपोटामिया","मिस्र","चीन"], answer:"सिंधु घाटी"},
           {question:"मोहनजोदड़ो किस नदी के किनारे था?", options:["सिंधु","गंगा","यमुना","नर्मदा"], answer:"सिंधु"}
-        ],
-        maurya: [
-          {question:"चंद्रगुप्त मौर्य के गुरु कौन थे?", options:["चाणक्य","रामानुज","पतंजलि","कालिदास"], answer:"चाणक्य"}
         ]
       },
       economics: {
         basics: [
           {question:"भारत की मुद्रा क्या है?", options:["डॉलर","रुपया","पौंड","यूरो"], answer:"रुपया"}
-        ],
-        gdp: [
-          {question:"GDP का फुल फॉर्म क्या है?", options:["Gross Domestic Product","Global Data Power","Great Development Plan","Government Data Policy"], answer:"Gross Domestic Product"}
         ]
       }
     };
@@ -62,13 +95,12 @@
     let currentQuestion = 0;
     let userAnswers = {};
 
-    // Open Topics from Section
     function openTopics(section){
       currentSection = section;
       document.getElementById("section-menu").style.display="none";
       let topicDiv = document.getElementById("topic-menu");
       topicDiv.style.display="block";
-      let html = `<h2>Choose Topic (${section.toUpperCase()})</h2>`;
+      let html = `<h2>Choose Topic</h2>`;
       for(let topic in sections[section]){
         html += `<button onclick="startQuiz('${topic}')">${topic}</button>`;
       }
@@ -76,13 +108,11 @@
       topicDiv.innerHTML = html;
     }
 
-    // Back to Section Menu
     function backToSections(){
       document.getElementById("topic-menu").style.display="none";
       document.getElementById("section-menu").style.display="block";
     }
 
-    // Start Quiz
     function startQuiz(topic){
       currentTopic = topic;
       currentQuestion = 0;
@@ -93,25 +123,22 @@
       loadQuestion();
     }
 
-    // Load Question
     function loadQuestion(){
       let questions = sections[currentSection][currentTopic];
       let q = questions[currentQuestion];
       let html = `<h3>Q${currentQuestion+1}. ${q.question}</h3>`;
       q.options.forEach(opt=>{
         let checked = userAnswers[currentQuestion]===opt ? "checked" : "";
-        html += `<label><input type="radio" name="q${currentQuestion}" value="${opt}" ${checked}> ${opt}</label><br>`;
+        html += `<div class="card"><label><input type="radio" name="q${currentQuestion}" value="${opt}" ${checked}> ${opt}</label></div>`;
       });
       document.getElementById("question-container").innerHTML = html;
     }
 
-    // Save Answer
     function saveAnswer(){
       let selected = document.querySelector(`input[name="q${currentQuestion}"]:checked`);
       if(selected) userAnswers[currentQuestion] = selected.value;
     }
 
-    // Next Question
     function nextQuestion(){
       saveAnswer();
       let questions = sections[currentSection][currentTopic];
@@ -121,7 +148,6 @@
       }
     }
 
-    // Prev Question
     function prevQuestion(){
       saveAnswer();
       if(currentQuestion > 0){
@@ -130,7 +156,6 @@
       }
     }
 
-    // Show Result
     function showResult(){
       saveAnswer();
       let questions = sections[currentSection][currentTopic];
@@ -158,7 +183,6 @@
       document.getElementById("result-container").innerHTML = resultHTML;
     }
 
-    // Restart Quiz
     function restartQuiz(){
       currentQuestion = 0;
       userAnswers = {};
